@@ -1,10 +1,10 @@
 ---
- src/usr.bin/make/main.c |    6 +-----
- 1 file changed, 1 insertion(+), 5 deletions(-)
+ src/usr.bin/make/main.c |   10 +++++-----
+ 1 file changed, 5 insertions(+), 5 deletions(-)
 
 --- a/src/usr.bin/make/main.c
 +++ b/src/usr.bin/make/main.c
-@@ -949,11 +949,7 @@ main(int argc, char **argv)
+@@ -949,11 +949,11 @@ main(int argc, char **argv)
  	 * run-time.
  	 */
  	if (machine == NULL) {
@@ -13,7 +13,11 @@
 -		if (uname(&utsname) == -1)
 -			err(2, "uname");
 -		machine = utsname.machine;
++#ifdef MACHINE_ARCH
 +		machine = MACHINE_ARCH;
++#else
++		machine = "unknown";
++#endif
  	}
  
  	if ((machine_arch = getenv("MACHINE_ARCH")) == NULL) {
