@@ -16,6 +16,7 @@ freebsd-buildutils (8.2-1) UNRELEASED; urgency=low
     and use it as pmake instead of using it from the pmake package.
   * Switch to debhelper compatibility level 7.
     - Use dh_prep instead of “dh_clean -k”.
+  * Only use MACHINE_ARCH in freebsd-make if it's defined.
 
  -- Robert Millan <rmh@debian.org>  Thu, 13 Jan 2011 18:29:12 +0100
 
